remote exception in mutant contrller, add comments, new utest